custom css effect for notes card title

--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.custom-card-hover:hover .text-xs {
+  color: white;
+}
